--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "comp_prog_lib_rs"
 version = "0.1.0"
-authors = ["ikanago <28985004+ikanago@users.noreply.github.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["ikanago <ikanago-dev@protonmail.com>"]
+edition = "2021"
 
 [dependencies]
+num = "0.4.1"
 proconio = "0.4.1"
 rand = "0.7.3"
+
+[dev-dependencies]
+proptest = "1.4.0"
